chapter 3: network architectures

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -5,12 +5,14 @@
 \newglossaryentry{BDD}{name=BDD,description={Behaviour Driven Development}}
 \newglossaryentry{CI}{name=CI,description={Continuous Integration}}
 \newglossaryentry{CORBA}{name=CORBA,description={Common Object Request Broker Architecture}}
+\newglossaryentry{CRUD}{name=CRUD,description={Create, Read, Update, Delete}}
 \newglossaryentry{CSS}{name=CSS,description={Cascading Style Sheets}}
 \newglossaryentry{DOM}{name=DOM,description={Document Object Model}}
 \newglossaryentry{DSL}{name=DSL,description={Domain-Specific Language}}
 \newglossaryentry{EIS}{name=EIS,description={Enterprise Information System}}
 \newglossaryentry{EL}{name=EL,description={Expression Language}}
 \newglossaryentry{ESB}{name=ESB,description={Enterprise Service Bus}}
+\newglossaryentry{HATEOAS}{name=HATEOAS,description={Hypermedia as the engine ot application state}}
 \newglossaryentry{HTML}{name=HTML,description={Hypertext Markup Language}}
 \newglossaryentry{HTTP}{name=HTTP,description={Hypertext Transfer Protocol}}
 \newglossaryentry{IDL}{name=IDL,description={Interface Description Language}}
@@ -20,14 +22,18 @@
 \newglossaryentry{MQ}{name=MQ,description={Message Queue}}
 \newglossaryentry{ORB}{name=ORB,description={Object Request Broker}}
 \newglossaryentry{OOP}{name=OOP,description={Object Oriented Programming}}
+\newglossaryentry{P2P}{name=P2P,description={Peer-to-peer}}
 \newglossaryentry{REST}{name=REST,description={Representational State Transfer}}
+\newglossaryentry{RMI}{name=RMI,description={Remote Method Invocation}}
 \newglossaryentry{RPC}{name=RPC,description={Remote Procedure Call}}
 \newglossaryentry{SLOC}{name=SLOC,description={Source Lines of Code}}
 \newglossaryentry{SOA}{name=SOA,description={Service Oriented Architecture}}
 \newglossaryentry{SOAP}{name=SOAP,description={Simple Object Access Protocol}}
+\newglossaryentry{TCP}{name=TCP,description={Transmission Control Protocol}}
 \newglossaryentry{UC}{name=UC,description={Use Case}}
 \newglossaryentry{UI}{name=UI,description={User Interface}}
 \newglossaryentry{URL}{name=URL,description={Uniform Resource Locator}}
+\newglossaryentry{URI}{name=URI,description={Uniform Resource Identifier}}
 \newglossaryentry{WSDL}{name=WSDL,description={Web Service Description Language}}
 \newglossaryentry{XML}{name=XML,description={Extensible Markup Language}}
 \newglossaryentry{XSD}{name=XSD,description={XML Schema Definition}}
