--- a/content/chapter-02-analyza.tex
+++ b/content/chapter-02-analyza.tex
@@ -96,7 +96,7 @@ váže na konkrétn\'{\i} byzynsovou operaci~\cite{cemus2015automated}.
 Abychom mohli efektivně definovat co nejširš\'{\i} škálu byzynsov\'ych pravidel,
 musej\'{\i} při jejich vyhodnocován\'{\i} b\'yt dostupné proměnné exekučn\'{\i}ho kontextu,
 
-\section{Architektura orientovaná na služby}
+\section{Architektura orientovaná na služby}\label{sec:soa}
 
 \goal{Úvod do SOA, proč je potřeba}
 V posledn\'{\i}ch dekádách můžeme sledovat trend nárůstu komplexity
@@ -122,7 +122,7 @@ době i ke snahám o opuštěn\'{\i} tohoto konceptu~\cite{cerny2017disambiguati
 Abychom lépe prozuměli tomu, co vlastně \gls{SOA} je, pop\'{\i}šeme si jej\'{\i} historick\'y
 v\'yvoj a shrneme v\'yhody a nev\'yhody jednotliv\'ych př\'{\i}stupů.
 
-\subsection{Common Object Request Broker Architecture}
+\subsection{Common Object Request Broker Architecture}\label{sec:corba}
 
 Prvn\'{\i}m historick\'ym předchůdcem architektury orientované na služby
 byla tzv. \textit{Common Object Request Broker Architecture}
