--- a/reference.bib
+++ b/reference.bib
@@ -548,3 +548,41 @@
     url = {https://git-scm.com/},
     urldate = {2018-04-20}
 }
+
+@online{techtargetclientserver,
+    key = {What is client/server (client/server model, client/server architecture)?},
+    title = {What is client/server (client/server model, client/server architecture)?},
+    url = {https://searchnetworking.techtarget.com/definition/client-server},
+    urldate = {2018-04-22}
+}
+
+@article{postel1981transmission,
+    title={Transmission control protocol},
+    author={Postel, Jon},
+    year={1981}
+}
+
+@article{fox2001peer,
+    title={Peer-to-peer networks},
+    author={Fox, Geoffrey},
+    journal={Computing in Science \& Engineering},
+    volume={3},
+    number={3},
+    pages={75--77},
+    year={2001},
+    publisher={IEEE},
+    address = {New York},
+}
+
+@techreport{fielding1999hypertext,
+    title={Hypertext transfer protocol--HTTP/1.1},
+    author={Fielding, Roy and Gettys, Jim and Mogul, Jeffrey and Frystyk, Henrik and Masinter, Larry and Leach, Paul and Berners-Lee, Tim},
+    year={1999}
+}
+
+@article{nelson1981remote,
+    title={Remote procedure call},
+    author={Nelson, Bruce Jay},
+    year={1981},
+    publisher={Carnegie Mellon University}
+}
