MDD + reasoning in chapter 3

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -20,9 +20,12 @@
 \newglossaryentry{JSON}{name=JSON,description={JavaScript Object Notation}}
 \newglossaryentry{MDA}{name=MDA,description={Model-Driver Architecture}}
 \newglossaryentry{MQ}{name=MQ,description={Message Queue}}
+\newglossaryentry{OMG}{name=OMG,description={Object Modeling Group}}
 \newglossaryentry{ORB}{name=ORB,description={Object Request Broker}}
 \newglossaryentry{OOP}{name=OOP,description={Object Oriented Programming}}
 \newglossaryentry{P2P}{name=P2P,description={Peer-to-peer}}
+\newglossaryentry{PIM}{name=PIM,description={Platform Independent Model}}
+\newglossaryentry{PSM}{name=PSM,description={Platform Specific Model}}
 \newglossaryentry{REST}{name=REST,description={Representational State Transfer}}
 \newglossaryentry{RMI}{name=RMI,description={Remote Method Invocation}}
 \newglossaryentry{RPC}{name=RPC,description={Remote Procedure Call}}
@@ -32,6 +35,7 @@
 \newglossaryentry{TCP}{name=TCP,description={Transmission Control Protocol}}
 \newglossaryentry{UC}{name=UC,description={Use Case}}
 \newglossaryentry{UI}{name=UI,description={User Interface}}
+\newglossaryentry{UML}{name=UML,description={Unified Modeling Language}}
 \newglossaryentry{URL}{name=URL,description={Uniform Resource Locator}}
 \newglossaryentry{URI}{name=URI,description={Uniform Resource Identifier}}
 \newglossaryentry{WSDL}{name=WSDL,description={Web Service Description Language}}
