--- a/content/chapter-02-analyza.tex
+++ b/content/chapter-02-analyza.tex
@@ -222,7 +222,7 @@ svůj \gls{ESB}.
     \label{fig:enterprise-service-bus}
 \end{figure}
 
-\subsection{Microservices}
+\subsection{Microservices}\label{sec:microservices}
 
 \goal{Microservices a budoucnost SOA}
 Nov\'ym trendem posledn\'{\i}ch let jsou takzvané \textit{Microservices}.
@@ -454,7 +454,7 @@ Framework, resp. jeho knihovny, by měly umožňovat:
     \item{Definice byznys kontextů pomoc\'{\i} platformně nezávislého doménově specifického jazyka srozumitelného pro doménové experty}
     \item{Zápis preconditions a post-conditions pravidla jednotliv\'ych byznys kontextů}
     \item{Možnost jednoho kontextu rozšiřovat jiné kontexty}
-    \item{Možnost centrálně spravovat byznysové kontexty, včetně úpravy stávaj\'{\i}c\'{\i}ch a vytvářen\'{\i} nov\'ych kontextů}
+    \item{Možnost centrálně spravovat byznysové kontexty, včetně úpravy stávaj\'{\i}c\'{\i}ch a vytvářen\'{\i} nov\'ych kontextů, to vše dynamicky za běhu systému}
     \item{Automatickou distribuci kontextů, vyhodnocován\'{\i} jejich preconditions a aplikaci post-conditions}
     \item{Možnost využ\'{\i}vat framework na v\'{\i}ce plaformách}
 \end{itemize}
