--- a/reference.bib
+++ b/reference.bib
@@ -580,9 +580,21 @@
     year={1999}
 }
 
-@article{nelson1981remote,
-    title={Remote procedure call},
-    author={Nelson, Bruce Jay},
-    year={1981},
-    publisher={Carnegie Mellon University}
+@article{soley2000model,
+    title={Model driven architecture},
+    author={Soley, Richard and others},
+    journal={OMG white paper},
+    volume={308},
+    number={308},
+    pages={5},
+    year={2000}
+}
+
+@incollection{pardon2011towards,
+    title={Towards distributed atomic transactions over RESTful services},
+    author={Pardon, Guy and Pautasso, Cesare},
+    booktitle={REST: From Research to Practice},
+    pages={507--524},
+    year={2011},
+    publisher={Springer}
 }
